--- a/app/views/audios/index.html.erb
+++ b/app/views/audios/index.html.erb
@@ -40,6 +40,28 @@
         <li style="color:grey"><%= audio.created_at %></li>
       </ul>
     </td>
+     <li>
+            <%= link_to 'Add Comment',new_comment_path(:post_id => audio.id), :class=> "add-comment", 
+            :id => "add-comment" + audio.id.to_s, :remote => true %> 
+            <%= audio.comments.size %>
+             
+            <%= link_to 'Like', like_audio_path(audio.id), class:"like-vote", method: :put, remote: true%>
+            <span class="like-count" data-id="<%= audio.id %>">
+              <%= audio.likecount %>
+            </span>
+ 
+            <div id="comment-form-<%= audio.id %>" class="comment-form" style="display:none;"></div> 
+           <table>
+             <% audio.comments.each do |comment| %>
+              <tr>
+                <td>
+                <%= link_to comment.user.name + ':', mytimeline_path(comment.user.id) %>
+                <%= comment.content %>  
+                </td>
+              </tr>
+              <% end %>  
+            </table>
+        </li>
 <!--     <td class="list_actions">
       <%= link_to 'Show', audio %><br/>
       <%= link_to 'Edit', edit_audio_path(audio) %><br/>
