--- a/app/views/users/mytimeline.html.erb
+++ b/app/views/users/mytimeline.html.erb
@@ -37,24 +37,28 @@
               <iframe frameborder="no" border="0" width=320 height=90 src="<%= music.link %>"></iframe>
             <% end %>
             <div style="color:grey"><%= music.created_at %></div> 
-            <%= link_to 'Add Comment', new_comment_path(:post_id => music.id)%> 
+          <li>
+            <%= link_to 'Add Comment',new_comment_path(:post_id => music.id), :class=> "add-comment", 
+            :id => "add-comment" + music.id.to_s, :remote => true %> 
             <%= music.comments.size %>
+             
             <%= link_to 'Like', like_music_path(music.id), class:"like-vote", method: :put, remote: true%>
             <span class="like-count" data-id="<%= music.id %>">
               <%= music.likecount %>
             </span>
-            <%= link_to 'Dislike', new_unlike_path(:post_id => music.id)%>
-            <%= music.unlikecount %>
-            <table>
-            <% music.comments.each do |comment| %>
-            <tr>
-              <td>
+ 
+            <div id="comment-form-<%= music.id %>" class="comment-form" style="display:none;"></div> 
+           <table>
+             <% music.comments.each do |comment| %>
+              <tr>
+                <td>
                 <%= link_to comment.user.name + ':', mytimeline_path(comment.user.id) %>
-                <%= comment.content %> 
-              </td>
-            </tr>
-            <% end %>   
+                <%= comment.content %>  
+                </td>
+              </tr>
+              <% end %>  
             </table>
+        </li>
 
         </td>
         <td class="list_actions">
