--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 <div class="well">
 <div class="middle-page">
   <div>
-  <%= image_tag(@user.image.url(:small), :class => "profile-img") %> 
+  <%= image_tag(@user.image.url(:regular), :class => "profile-large-img") %> 
   </div>
 </div>
 
@@ -14,10 +14,10 @@
 <td align="right"><strong>Name:</strong></td>
 <td><%= @user.name %></td>
 </tr>
-<tr>
+<!-- <tr>
 <td align="right"><strong>UID:</strong></td>
 <td><%= @user.id %></td>
-</tr>
+</tr> -->
 <tr>
 <td align="right"><strong>Gender:</strong></td>
 <td><%= @user.gender %></td>
