change date format

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,7 +32,7 @@
 </tr>
 <tr>
 <td align="right"><strong>Register Time:</strong></td>
-<td><%= @user.created_at %></td> 
+<td><%= @date %></td> 
 </tr>
 
 </table>
