--- a/app/views/users/friends.html.erb
+++ b/app/views/users/friends.html.erb
@@ -8,12 +8,12 @@
         <% @user.friends.each do |friend| %>
         <tr>
         <td class="col-md-6">
-          <%= link_to (image_tag friend.image.url(:small), :class => "profile-img"), mytimeline_path(friend.id) %>
-           <%= link_to friend.name, user_path(friend.id) %> 
+          <%= image_tag friend.image.url(:small), :class => "profile-img" %>
+           <%= link_to friend.name, mytimeline_path(friend.id) %> 
           <% if @current_user == @user %>
-        </td>
-        <td class="col-md-2" style="vertical-align:middle">
-            <%= link_to "Remove", friendship_path(:friended_id => friend.id), :method => :delete, :class=>"btn btn-default" %>
+            </td>
+            <td class="col-md-2" style="vertical-align:middle">
+                <%= link_to "Delete", friendship_path(:friended_id => friend.id), :method => :delete, :class=>"btn btn-default" %>
           <% end %>
         </td>
         </tr>
