--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,5 @@
 
 
-<!-- <div class="col-md-2"><%= link_to 'New Music', new_music_path, remote: true, class: "btn btn-primary" %></div>
-<div class="col-md-2"><%= link_to 'See audios', audios_path, class: "btn btn-default" %></div> -->
-
 <%= form_tag(search_url, :method => 'get', :id => 'users_search') do %>
         <%= text_field_tag :search, params[:search], placeholder: "Search Users"%>
         <%= submit_tag "Search", class: "btn btn-primary" %>
@@ -14,6 +11,8 @@
     else
       @searchedUsers = User.order("created_at DESC")
     end    
+
+    @current_user = User.find(session[:user_id])
 %>
 
 <br />
@@ -23,13 +22,22 @@
 <% if (@searchedUsers) %>
 
     <table class="table table-striped">
-        <% @searchedUsers.each do |searchedUser| %>
+      <% @searchedUsers.each do |searchedUser| %>
+        <% unless searchedUser == @current_user %>
+
         <tr>
         <td class="col-md-6">
-          <%= link_to (image_tag searchedUser.image.url(:small), :class => "profile-img"), mytimeline_path(searchedUser.id) %>
-           <%= link_to searchedUser.name, user_path(searchedUser.id) %> 
+          <% if @current_user.check_friendship(searchedUser.id) %>
+            <%= image_tag searchedUser.image.url(:small), :class => "profile-img" %>
+            <%= link_to searchedUser.name, mytimeline_path(searchedUser.id) %> 
+          <% else %>
+            <%= image_tag searchedUser.image.url(:small), :class => "profile-img" %>
+            <%= link_to searchedUser.name, user_path(searchedUser.id) %> 
+          <% end %>
         </td>
         </tr>
+        
+        <% end %>
       <% end %>
     </table>
 
