comment limit and timestamps

--- a/app/views/musics/_form.html.erb
+++ b/app/views/musics/_form.html.erb
@@ -15,7 +15,7 @@
 
   <div class="field">
     <label class="sr-only">Comment:</label>
-    <%= f.text_area :comment,rows:4, placeholder: 'Say something to your friends...', :class => "form-control" %>
+    <%= f.text_area :comment,rows:4, :maxlength => 200, placeholder: 'Say something to your friends... (max 200 characters)', :class => "form-control" %>
   </div>
 
   <br>
