--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -42,11 +42,16 @@
               dayDiff = (Time.zone.now - music.created_at).to_i / 1.day
               if dayDiff == 0 
                 hourDiff = (Time.zone.now - music.created_at).to_i / 1.hour
+                if hourDiff == 0
+                  minDiff = (Time.zone.now - music.created_at).to_i / 1.minute
             %>
-              <li style="color:grey"><%= hourDiff%> hours ago</li> 
+                <div style="color:grey"><%= minDiff%> min ago</div> 
+                <% else %>
+                <div style="color:grey"><%= hourDiff%> hours ago</div> 
+                <% end %>
             <% else %>
-              <li style="color:grey"><%= dayDiff%> days ago</li>
-            <% end %>    
+              <div style="color:grey"><%= dayDiff%> days ago</div>
+            <% end %>  
 
         <li>
             <%= link_to 'Add Comment',new_comment_path(:post_id => music.id), :class=> "add-comment", 
