tag cloud prototype

--- a/app/views/audios/index.html.erb
+++ b/app/views/audios/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="row">
-<div class="col-md-8"><h1>Discover audio</h1></div>
+<div class="col-md-8"><h1>Explore audios</h1></div>
 <!-- <button class="btn btn-default"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span><%= link_to 'New Music', new_music_path %></button> -->
 
 <div class="col-md-2"><%= link_to 'New Audio', new_audio_path, class: "btn btn-primary" %></div>
