--- a/app/views/musics/_form.html.erb
+++ b/app/views/musics/_form.html.erb
@@ -13,10 +13,17 @@
     </div>
   <% end %>
 
+  <br />
   <div class="field">
     <label class="sr-only">Comment:</label>
     <%= f.text_area :comment,rows:4, :maxlength => 200, placeholder: 'Say something to your friends... (max 200 characters)', :class => "form-control" %>
   </div>
+
+  <div class="field">
+    <%= f.label :tag_list, "Tags", :class => "col-md-1" %>
+    <%= f.text_field :tag_list, :class => " col-md-10", placeholder: '(separated by commas)'%>
+  </div>
+  <br />
 
   <br>
   <div class="field row">
