--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -43,3 +43,10 @@ ul.music-item li{
 .inline {
 	display: inline;
 }
+
+
+
+.css1 { font-size: 1.0em; }
+.css2 { font-size: 1.6em; }
+.css3 { font-size: 2.2em; }
+.css4 { font-size: 2.8em; }
