--- a/app/views/users/mytimeline.html.erb
+++ b/app/views/users/mytimeline.html.erb
@@ -80,6 +80,7 @@
       </tr>
     <% end %>
     </table>
+    <%= will_paginate @mymusics, renderer: BootstrapPagination::Rails %>
   <% end %>
 
 <br />
