fix bug in comment

--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -63,7 +63,7 @@
               <%= music.likecount %>
             </span>
  
-          <!-- <div id="comment-form-<%= music.id %>" class="comment-form" style="display:none;"></div>  -->
+          <div id="comment-form-<%= music.id %>" class="comment-form" style="display:none;"></div> 
             <table>
              <% music.comments.each do |comment| %>
               <tr>
