--- a/app/views/musics/_form.html.erb
+++ b/app/views/musics/_form.html.erb
@@ -19,11 +19,11 @@
     <%= f.text_area :comment,rows:4, :maxlength => 200, placeholder: 'Say something to your friends... (max 200 characters)', :class => "form-control" %>
   </div>
 
-  <div class="field">
+  <br>
+  <div class="field row">
     <%= f.label :tag_list, "Tags", :class => "col-md-1" %>
-    <%= f.text_field :tag_list, :class => " col-md-10", placeholder: '(separated by commas)'%>
+    <%= f.text_field :tag_list, :class => " col-md-10", placeholder: 'hashtags for this music (e.g. #tag1 #tag2)'%>
   </div>
-  <br />
 
   <br>
   <div class="field row">
