add number to notification

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,6 +89,7 @@
         <li>
           <%= link_to notification_path(session[:user_id])  do %>
           <i class="glyphicon glyphicon-envelope">&nbsp;Notification</i>
+          <span class="badge"><%=Unreadcomment.where(user_id: User.find(session[:user_id])).size%>
           <% end %>
         </li>
 
