--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Music Sharing Platform</title>
+  <title>MusiCloud</title>
 
    <!-- <%= stylesheet_link_tag    "application", media: "all",
     "data-turbolinks-track" => true %> -->
@@ -30,7 +30,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><!--<%= image_tag("logo.png") %>--><%= @page_title || "Music Sharing Platform" %></a>
+            <a class="navbar-brand" href="#"><!--<%= image_tag("logo.png") %>--><%= @page_title || "MusiCloud" %>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a>
 
           </div>
           <div id="navbar" class="navbar-collapse collapse">
