--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><!--<%= image_tag("logo.png") %>--><%= @page_title || "MusiCloud" %>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a>
+            <a class="navbar-brand" href="#"><!--<%= image_tag("logo.png") %>-->&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<%= @page_title || "MusiCloud" %>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a>
 
           </div>
           <div id="navbar" class="navbar-collapse collapse">
