tag cloud order and filter & show tags in musics

--- a/app/views/tag/cloud.html.erb
+++ b/app/views/tag/cloud.html.erb
@@ -1,5 +1,7 @@
 <h1>Tag Cloud</h1>
 
-<% tag_cloud(Music.tag_counts, %w(css1 css2 css3 css4)) do |tag, css_class| %>
+<!-- sorted alphabetically -->
+<% tag_cloud(Music.tag_counts.sort { |x, y| x.name <=> y.name }.select { |x| x.taggings_count > @threshold }, %w(css1 css2 css3 css4)) do |tag, css_class| %>
   <%= link_to tag.name, tag_path(tag), :class => css_class %>
 <% end %>
+
