--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -44,9 +44,12 @@ ul.music-item li{
 	display: inline;
 }
 
-
+.hashtag {
+	color: #428bca;
+}
 
 .css1 { font-size: 1.0em; }
 .css2 { font-size: 1.6em; }
 .css3 { font-size: 2.2em; }
 .css4 { font-size: 2.8em; }
+
