--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -26,7 +26,17 @@
         <li>
         <strong><%= link_to music.user.name, mytimeline_path(music.uid) %></strong>
         </li>
-        <li> <%= music.comment %> </li>
+        <li> 
+          <%= music.comment %> 
+          <div class="hashtag">
+            <!-- <%= music.tag_list %> -->
+            <% music.tags.any? %>
+                 <% music.tags.each do |tag| %>
+                    #<%= link_to tag.name, tag_path(tag.name) %>
+            <% end %>
+
+          </div> 
+        </li>
         <li> 
           <p>
             <% if music.sharetype == 1 %>
