--- a/app/views/audios/index.html.erb
+++ b/app/views/audios/index.html.erb
@@ -26,21 +26,35 @@
         <li>
         <strong><%= link_to audio.user.name, mytimeline_path(audio.uid) %></strong>
         </li>
-        <li> <%= audio.comment %> </li>
+        <li> 
+          <%= audio.comment %> 
+        </li>
         <li>  
+          <p>
           <audio controls>
           <source src=<%= audio.audioFile.url %> type="audio/mpeg">
             Your browser does not support the audio element.
-          </audio></li>
+          </audio>
+          </p>
+        </li>
+
         <!-- <li style="color:grey"><%= audio.created_at %></li> -->
-      </ul>
-    </td>
-    <td>
-      <ul>
-        <li style="color:grey"><%= audio.created_at %></li>
-      </ul>
-    </td>
-     <li>
+            <% 
+              dayDiff = (Time.zone.now - audio.created_at).to_i / 1.day
+              if dayDiff == 0 
+                hourDiff = (Time.zone.now - audio.created_at).to_i / 1.hour
+                if hourDiff == 0
+                  minDiff = (Time.zone.now - audio.created_at).to_i / 1.minute
+            %>
+                <div style="color:grey"><%= minDiff%> min ago</div> 
+                <% else %>
+                <div style="color:grey"><%= hourDiff%> hours ago</div> 
+                <% end %>
+            <% else %>
+              <div style="color:grey"><%= dayDiff%> days ago</div>
+            <% end %> 
+
+        <li>
             <%= link_to 'Add Comment',new_comment_path(:post_id => audio.id), :class=> "add-comment", 
             :id => "add-comment" + audio.id.to_s, :remote => true %> 
             <%= audio.comments.size %>
@@ -62,6 +76,11 @@
               <% end %>  
             </table>
         </li>
+
+
+        
+      </ul>
+    </td>        
 <!--     <td class="list_actions">
       <%= link_to 'Show', audio %><br/>
       <%= link_to 'Edit', edit_audio_path(audio) %><br/>
