--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -32,7 +32,7 @@
             <!-- <%= music.tag_list %> -->
             <% music.tags.any? %>
                  <% music.tags.each do |tag| %>
-                    #<%= link_to tag.name, tag_path(tag.name) %>
+                    #<%= link_to tag.name, tag_path(tag) %>
             <% end %>
 
           </div> 
