--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -6,6 +6,7 @@
       <th>Post</th>
       <th>User</th>
       <th>Content</th>
+      <th>Commenttype</th>
       <th></th>
       <th></th>
       <th></th>
@@ -18,6 +19,7 @@
         <td><%= comment.post_id %></td>
         <td><%= comment.user_id %></td>
         <td><%= comment.content %></td>
+        <td><%= comment.commenttype %></td>
         <td><%= link_to 'Show', comment %></td>
         <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
         <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
