--- a/app/views/tag/show.html.erb
+++ b/app/views/tag/show.html.erb
@@ -43,9 +43,9 @@
 	            <% end %>  
 	        
 	        <li>
-	            <%= link_to 'Add Comment',new_comment_path(:post_id => music.id), :class=> "add-comment", 
+	            <%= link_to 'Add Comment',new_comment_path(:post_id => music.id, :commenttype => @commenttype), :class=> "add-comment", 
 	            :id => "add-comment" + music.id.to_s, :remote => true %> 
-	            <%= music.comments.size %>
+	            <%= music.allcomments.size %>
 	             
 	            <%= link_to 'Like', like_music_path(music.id), class:"like-vote", method: :put, remote: true%>
 	            <span class="like-count" data-id="<%= music.id %>">
@@ -53,16 +53,20 @@
 	            </span>
 	 
 	            <div id="comment-form-<%= music.id %>" class="comment-form" style="display:none;"></div> 
-	           <table>
-	             <% music.comments.each do |comment| %>
-	              <tr>
-	                <td>
-	                <%= link_to comment.user.name + ':', mytimeline_path(comment.user.id) %>
-	                <%= comment.content %>  
-	                </td>
-	              </tr>
-	              <% end %>  
-	            </table>
+	            <table>
+           <td>Comments:</td>
+             <% music.top3comments.each do |comment| %>
+              <tr>
+                <td>
+                <%= link_to comment.user.name + ':', mytimeline_path(comment.user.id) %>
+                <%= comment.content %>  
+                </td>
+              </tr>
+              <% end %>  
+              <td>
+              <%= link_to 'Show all comments', allcomments_path(music.id) %>
+              </td>
+            </table>
 	        </li>
 	        
 	      </ul>
