--- a/app/views/audios/index.html.erb
+++ b/app/views/audios/index.html.erb
@@ -55,13 +55,13 @@
             <% end %> 
 
         <li>
-            <%= link_to 'Add Comment',new_comment_path(:post_id => audio.id, commenttype => @commenttype), :class=> "add-comment", 
+            <%= link_to 'Add Comment',new_comment_path(:post_id => audio.id, :commenttype => @commenttype), :class=> "add-comment", 
             :id => "add-comment" + audio.id.to_s, :remote => true %> 
-            <%= audio.comments.size %>
+            <%= audio.audioallcomments.size %>
              
             <%= link_to 'Like', like_audio_path(audio.id), class:"like-vote", method: :put, remote: true%>
             <span class="like-count" data-id="<%= audio.id %>">
-              <%= audio.likecount %>
+              <%= audio.audiolikecount %>
             </span>
  
             <div id="comment-form-<%= audio.id %>" class="comment-form" style="display:none;"></div> 
