--- a/app/views/likes/_form.html.erb
+++ b/app/views/likes/_form.html.erb
@@ -16,6 +16,11 @@
     <%= f.hidden_field :post_id, :value => params[:post_id]%>
   </div>
 
+  <div class="field">
+      <%= f.hidden_field :liketype, :value => params[:liketype] %>
+  </div>
+
+
 
   <div class="actions">
     <%= f.submit %>
