--- a/app/views/audios/index.html.erb
+++ b/app/views/audios/index.html.erb
@@ -59,13 +59,14 @@
             :id => "add-comment" + audio.id.to_s, :remote => true %> 
             <%= audio.audioallcomments.size %>
              
-            <%= link_to 'Like', like_audio_path(audio.id), class:"like-vote", method: :put, remote: true%>
+            <%= link_to 'Like', like_music_path(:id =>audio.id, :liketype => @liketype), class:"like-vote", method: :put, remote: true%>
             <span class="like-count" data-id="<%= audio.id %>">
               <%= audio.audiolikecount %>
             </span>
  
             <div id="comment-form-<%= audio.id %>" class="comment-form" style="display:none;"></div> 
            <table>
+            <% if audio.audioallcomments.size != 0 %>
            <td>Comments:</td>
              <% audio.audiotop3comments.each do |comment| %>
               <tr>
@@ -75,9 +76,12 @@
                 </td>
               </tr>
               <% end %>  
+              <% if audio.audioallcomments.size >3 %> 
               <td>
               <%= link_to 'Show all comments', audioallcomments_path(audio.id) %>
               </td>
+               <% end %> 
+                <% end %> 
             </table>
         </li>
 
