--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -75,6 +75,7 @@
  
           <div id="comment-form-<%= music.id %>" class="comment-form" style="display:none;"></div> 
             <table>
+          <% if music.allcomments.size != 0 %>
            <td>Comments:</td>
              <% music.top3comments.each do |comment| %>
               <tr>
@@ -83,10 +84,13 @@
                 <%= comment.content %>  
                 </td>
               </tr>
-              <% end %>  
+              <% end %> 
+              <% if music.allcomments.size >3 %> 
               <td>
               <%= link_to 'Show all comments', allcomments_path(music.id) %>
               </td>
+              <% end %>
+              <% end %>
             </table>
         </li>
 
