--- a/app/views/users/mytimeline.html.erb
+++ b/app/views/users/mytimeline.html.erb
@@ -69,6 +69,7 @@
             <div id="comment-form-<%= music.id %>" class="comment-form" style="display:none;"></div> 
 
            <table>
+          <% if music.allcomments.size != 0 %>
            <td>Comments:</td>
              <% music.top3comments.each do |comment| %>
               <tr>
@@ -77,10 +78,13 @@
                 <%= comment.content %>  
                 </td>
               </tr>
-              <% end %>  
+              <% end %> 
+              <% if music.allcomments.size >3 %> 
               <td>
               <%= link_to 'Show all comments', allcomments_path(music.id) %>
               </td>
+              <% end %>
+              <% end %>
             </table>
         </li>
 
