--- a/app/views/users/mytimeline.html.erb
+++ b/app/views/users/mytimeline.html.erb
@@ -57,7 +57,7 @@
               <div style="color:grey"><%= dayDiff%> days ago</div>
             <% end %>
           <li>
-            <%= link_to 'Add Comment',new_comment_path(:post_id => music.id, :commenttype => @commenttype), :class=> "add-comment", 
+            <%= link_to 'Comment',new_comment_path(:post_id => music.id, :commenttype => @commenttype), :class=> "add-comment", 
             :id => "add-comment" + music.id.to_s, :remote => true %> 
             <%= music.allcomments.size %>
              
@@ -70,7 +70,7 @@
 
            <table>
           <% if music.allcomments.size != 0 %>
-           <td>Comments:</td>
+           <!-- <td>Comments:</td> -->
              <% music.top3comments.each do |comment| %>
               <tr>
                 <td>
