--- a/app/views/users/mytimeline.html.erb
+++ b/app/views/users/mytimeline.html.erb
@@ -1,6 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Back', :back %>
+<!-- <%= link_to 'Back', :back %> -->
+<div class="row">
+<div class="col-md-2"><%= link_to 'See audios', audiotimeline_path(session[:user_id]), class: "btn btn-primary" %></div>
+</div>
 
 <div class="middle-page">
   <div>
