--- a/app/views/tag/show.html.erb
+++ b/app/views/tag/show.html.erb
@@ -59,7 +59,7 @@
 	            :id => "add-comment" + music.id.to_s, :remote => true %> 
 	            <%= music.allcomments.size %>
 	             
-	            <%= link_to 'Like', like_music_path(music.id), class:"like-vote", method: :put, remote: true%>
+	            <%= link_to 'Like', like_music_path(:id =>music.id, :liketype => @liketype), class:"like-vote", method: :put, remote: true%>
 	            <span class="like-count" data-id="<%= music.id %>">
 	              <%= music.likecount %>
 	            </span>
