--- a/app/views/audios/index.html.erb
+++ b/app/views/audios/index.html.erb
@@ -3,11 +3,11 @@
 <div class="col-md-8"><h1>Explore audios</h1></div>
 <!-- <button class="btn btn-default"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span><%= link_to 'New Music', new_music_path %></button> -->
 
-<div class="col-md-2"><%= link_to 'New Audio', new_audio_path, class: "btn btn-primary" %></div>
+<div class="col-md-2"><%= link_to 'New Audio', new_audio_path, remote: true, class: "btn btn-primary" %></div>
 <div class="col-md-2"><%= link_to 'See musics', musics_path, class: "btn btn-default" %></div>
 </div>
 
-<div id="music-form" style="display:none;"></div> 
+<div id="audio-form" style="display:none;"></div> 
 <br>
 
 <div >
