enable notification view comment

--- a/app/views/audios/_form.html.erb
+++ b/app/views/audios/_form.html.erb
@@ -17,7 +17,7 @@
 
   <div class="field">
     <label class="sr-only">Comment:</label>
-    <%= f.text_area :comment,rows:4, placeholder: 'Say something to your friends...', :class => "form-control" %>
+    <%= f.text_area :comment,rows:4, placeholder: "What's on your mind? ", :class => "form-control" %>
   </div>
 
   <br>
