--- a/app/views/unreadcomments/view_comment.html.erb
+++ b/app/views/unreadcomments/view_comment.html.erb
@@ -91,6 +91,82 @@
 
 <% else %>
 
+<tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
+    <td>
+      <div>
+      <%= image_tag(@audio.user.image.url(:small), :class => "profile-img") %>
+      </div>
+    </td>
+    <td class="list_description">
+      <ul class="music-item">
+        <li>
+        <strong><%= link_to @audio.user.name, mytimeline_path(@audio.uid) %></strong>
+        </li>
+        <li> 
+          <%= @audio.comment %> 
+        </li>
+        <li>  
+          <p>
+          <audio controls>
+          <source src=<%= @audio.audioFile.url %> type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
+          </p>
+        </li>
+
+        <!-- <li style="color:grey"><%= @audio.created_at %></li> -->
+            <% 
+              dayDiff = (Time.zone.now - @audio.created_at).to_i / 1.day
+              if dayDiff == 0 
+                hourDiff = (Time.zone.now - @audio.created_at).to_i / 1.hour
+                if hourDiff == 0
+                  minDiff = (Time.zone.now - @audio.created_at).to_i / 1.minute
+            %>
+                <div style="color:grey"><%= minDiff%> min ago</div> 
+                <% else %>
+                <div style="color:grey"><%= hourDiff%> hours ago</div> 
+                <% end %>
+            <% else %>
+              <div style="color:grey"><%= dayDiff%> days ago</div>
+            <% end %> 
+
+        <li>
+            <%= link_to 'Comment',new_comment_path(:post_id => @audio.id, :commenttype => @commenttype), :class=> "add-comment", 
+            :id => "add-comment" + @audio.id.to_s, :remote => true %> 
+            <%= @audio.audioallcomments.size %>
+             
+            <%= link_to 'Like', like_audio_path(:id =>@audio.id, :liketype => @liketype), class:"like-vote", method: :put, remote: true%>
+            <span class="like-count" data-id="<%= @audio.id %>">
+              <%= @audio.audiolikecount %>
+            </span>
+ 
+            <div id="comment-form-<%= @audio.id %>" class="comment-form" style="display:none;"></div> 
+           <table>
+            <% if @audio.audioallcomments.size != 0 %>
+           <!-- <td>Comments:</td> -->
+             <% @audio.audiotop3comments.each do |comment| %>
+              <tr>
+                <td>
+                <%= link_to comment.user.name + ':', mytimeline_path(comment.user.id) %>
+                <%= comment.content %>  
+                </td>
+              </tr>
+              <% end %>  
+              <% if @audio.audioallcomments.size >3 %> 
+              <td>
+              <%= link_to 'Show all comments', audioallcomments_path(@audio.id) %>
+              </td>
+               <% end %> 
+                <% end %> 
+            </table>
+        </li>
+
+
+        
+      </ul>
+    </td>        
+  </tr>
+
 <% end %>
 
 </table>
