--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,3 @@
-<h1>New user</h1>
 
 <div class="depot_form">
 <br />
@@ -17,7 +16,7 @@
 
   <fieldset>
   <div class="form-signin">
-  <legend>Enter User Details</legend>
+  <legend>Sign Up</legend>
 
   <div class="field">
     <div><%= f.label :name, 'Name:' %></div>
@@ -38,14 +37,16 @@
     <%= f.password_field :password_confirmation, size: 40, :class => "form-control" %>
   </div>
 
-  <div class="actions btn btn-submit">
-    <%= f.submit %>
+  <div class="actions">
+    <%= f.submit 'Register', :class=>"btn btn-submit btn-primary"  %>
   </div>
 
-  <%= link_to 'Back', login_url %>
+ <br>
+ <%= link_to 'Back', login_url %> 
 
 
 </div>
+
   </fieldset>
 <% end %>
 </div>
