validate music link

--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -59,3 +59,27 @@ ul.music-item li{
 	font-size: 2.0em;
 	color: #428bca;
 }
+
+#error_explanation {
+  width: 450px;
+  border: 2px solid red;
+  padding: 7px;
+  padding-bottom: 0;
+  margin-bottom: 20px;
+  background-color: #f0f0f0;
+  color: red;
+  h4 {
+    text-align: left;
+    font-weight: bold;
+    padding: 5px 5px 5px 15px;
+    font-size: 12px;
+    margin: -7px;
+    margin-bottom: 0px;
+    background-color: #c00;
+    
+  }
+  ul li {
+    font-size: 12px;
+    list-style: square;
+  }
+}
