--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -52,7 +52,8 @@ div {
   padding-bottom: 0;
   margin-bottom: 20px;
   background-color: #f0f0f0;
-  h2 {
+  color: red;
+  h4 {
     text-align: left;
     font-weight: bold;
     padding: 5px 5px 5px 15px;
@@ -60,7 +61,7 @@ div {
     margin: -7px;
     margin-bottom: 0px;
     background-color: #c00;
-    color: #fff;
+    
   }
   ul li {
     font-size: 12px;
