--- a/app/views/musics/_form.html.erb
+++ b/app/views/musics/_form.html.erb
@@ -1,9 +1,6 @@
-<div class="middle-page">
-<hr>
-<%= form_for(@music, :html => {:class => "form-group"}) do |f| %>
   <% if @music.errors.any? %>
     <div id="error_explanation">
-      <h3><%= pluralize(@music.errors.count, "error") %> prohibited this music from being saved:</h3>
+      <h4>Cannot post this music</h4>
 
       <ul>
       <% @music.errors.full_messages.each do |msg| %>
@@ -12,6 +9,11 @@
       </ul>
     </div>
   <% end %>
+  
+<div class="middle-page">
+<hr>
+<%= form_for(@music, :html => {:class => "form-group"}) do |f| %>
+
 
   <br />
   <div class="field">
@@ -28,7 +30,7 @@
   <br>
   <div class="field row">
     <%= f.label :link, :class => "col-md-1" %>
-    <%= f.text_field :link, :class => " col-md-10", placeholder: 'http://music.163.com/outchain/player?type=2&id=31545366......'%>
+    <%= f.text_field :link, :class => " col-md-10", placeholder: 'http://music.163.com/#/song?id=28391135......'%>
   </div>
 
   <br>
