--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,7 +1,6 @@
-<%= form_for(@comment) do |f| %>
   <% if @comment.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
+      <h4>Failed to post this comment</h4>
 
       <ul>
       <% @comment.errors.full_messages.each do |msg| %>
@@ -11,6 +10,7 @@
     </div>
   <% end %>
 
+<%= form_for(@comment) do |f| %>
 
 <div class="row">
   <div class="field col-md-9">
