--- a/app/views/friendships/_form.html.erb
+++ b/app/views/friendships/_form.html.erb
@@ -1,7 +1,6 @@
-<%= form_for(@friendship) do |f| %>
   <% if @friendship.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@friendship.errors.count, "error") %> prohibited this friendship from being saved:</h2>
+      <h4>Failed to create this friendship</h4>
 
       <ul>
       <% @friendship.errors.full_messages.each do |msg| %>
@@ -10,6 +9,8 @@
       </ul>
     </div>
   <% end %>
+
+<%= form_for(@friendship) do |f| %>
 
   <div class="field">
     <%= f.label :friender_id %><br>
