style tag cloud

--- a/app/views/tag/cloud.html.erb
+++ b/app/views/tag/cloud.html.erb
@@ -2,6 +2,7 @@
 	Tag Cloud
 </h1> -->
 
+<div class="middle-page">
 <h1>
 	Trending
 </h1>
@@ -13,3 +14,4 @@
   <%= link_to tag.name, tag_path(tag), :class => css_class %>
 <% end %>
 
+<div/>
