--- a/app/views/tag/cloud.html.erb
+++ b/app/views/tag/cloud.html.erb
@@ -14,4 +14,17 @@
   <%= link_to tag.name, tag_path(tag), :class => css_class %>
 <% end %>
 
+	<section class="cd-intro">
+		<h1 class="cd-headline rotate-1">
+			<span>My favourite music is</span>
+			<span class="cd-words-wrapper">
+				<b class="is-visible">pop</b>
+				<b>rock</b>
+				<b>jazz</b>
+				<b>rap</b>
+				<b>latin</b>
+			</span>
+		</h1>
+	</section> <!-- cd-intro -->
+
 <div/>
