--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -101,6 +101,22 @@
         </ul>        
       <% end %>
 
+      
+    <div id="animation">
+        <div class="mallet left"></div>
+        <div class="mallet right"></div>
+        <div class="xylophone">
+            <div></div><span></span>
+            <div></div><span></span>
+            <div></div><span></span>
+            <div></div><span></span>
+            <div></div><span></span>
+            <div></div><span></span>
+            <div></div><span></span>
+            <div></div><span></span>
+        </div>
+    </div>
+
     </div> 
 
     <div id="main" style="margin-top:50px;margin-bottom:20px" class="col-md-8 col-sm-7 col-sm-offset-3 col-md-offset-2">
