--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
               <li><a href=<%=home_url%>>Home</a></li>
               <li><a href=<%=search_url%>>Search</a></li>
               <li><a href=<%=contact_url%>>Contact</a></li>
-              <li><a href=<%=tag_cloud_path%>><font color="#FF6262"><b>What's hot?</b></font></a></li>
+              <li><a href=<%=trends_url%>><font color="#FF6262"><b>What's hot?</b></font></a></li>
 
             </ul>
             <% if session[:user_id] %>
@@ -101,7 +101,7 @@
         </ul>        
       <% end %>
 
-      
+
     <div id="animation">
         <div class="mallet left"></div>
         <div class="mallet right"></div>
