--- a/app/views/unreadcomments/view_comment.html.erb
+++ b/app/views/unreadcomments/view_comment.html.erb
@@ -20,7 +20,7 @@
             <!-- <%= @music.tag_list %> -->
             <% @music.tags.any? %>
                  <% @music.tags.each do |tag| %>
-                    #<%= link_to tag.name, tag_path(tag) %>
+                    #<%= link_to tag.name, showtag_path(tag) %>
             <% end %>
 
           </div> 
