added real life audios

--- a/app/views/tag/cloud.html.erb
+++ b/app/views/tag/cloud.html.erb
@@ -3,9 +3,12 @@
 </h1> -->
 
 <div class="middle-page">
-<h1>
-	Trending
-</h1>
+<!-- <section class="cd-intro"> -->
+		<h1 class="cd-headline rotate-1">
+			<span>Trending</span>
+		</h1>
+	<!-- </section> -->
+<!-- </h1> -->
 
 <br>
 
