--- a/app/views/users/newfriend.html.erb
+++ b/app/views/users/newfriend.html.erb
@@ -1,7 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 
-<h3>Friend Requests</h3>
+<!-- <h3>Friend Requests</h3> -->
+  <h1 class="cd-headline">
+    <span>Friend Requests</span>
+  </h1>
+
 <br >
 
     <% if @current_user == @user && @user.requests_from.any? %>
