--- a/app/views/users/notification.html.erb
+++ b/app/views/users/notification.html.erb
@@ -1,5 +1,9 @@
 <p id="notice"><%= notice %></p>
-<h3>Comments</h3>
+<!-- <h3>Comments</h3> -->
+  <h1 class="cd-headline">
+    <span>Comments</span>
+  </h1>
+
 <br >
 
 <table class="table table-striped">
@@ -33,7 +37,11 @@
 
 <br >
 
-<h3>Likes</h3>
+<!-- <h3>Likes</h3> -->
+  <h1 class="cd-headline">
+    <span>Likes</span>
+  </h1>
+
 <br >
 
 <table class="table table-striped">
