--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -1,6 +1,9 @@
 
 <div class="row">
-<div class="col-md-8"><h1>Explore musics</h1></div>
+  <h1 class="cd-headline col-md-8">
+    <span>Explore musics</span>
+  </h1>  
+<!-- <div class="col-md-8"><h1>Explore musics</h1></div> -->
 <!-- <button class="btn btn-default"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span><%= link_to 'New Music', new_music_path %></button> -->
 
 <div class="col-md-2"><%= link_to 'New Music', new_music_path, remote: true, class: "btn btn-primary" %></div>
